--- a/DirectoryService/src/DirectoryService.Presentation/appsettings.json
+++ b/DirectoryService/src/DirectoryService.Presentation/appsettings.json
@@ -1,9 +1,12 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DirectoryServiceDb": "Server=localhost;Port=5435;Database=directory_service_db;User Id=postgres;Password=postgres"
   },
   "AllowedHosts": "*"
 }
