feat: add result and envelope

--- a/DirectoryService/src/DirectoryService.Presentation/Properties/launchSettings.json
+++ b/DirectoryService/src/DirectoryService.Presentation/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5218/swagger/index.html",
+      "launchUrl": "http://localhost:5218/swagger",
       "applicationUrl": "http://localhost:5218",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
