--- a/DirectoryService/src/DirectoryService.Domain/DirectoryService.Domain.csproj
+++ b/DirectoryService/src/DirectoryService.Domain/DirectoryService.Domain.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SharedKernel\SharedKernel.csproj" />
+    </ItemGroup>
+
 </Project>
